add config files to connect to MongoDB

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
+pymongo = {extras = ["srv"], version = "^4.10.1"}
 
 
 [build-system]
