--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.0"}
 pymongo = {extras = ["srv"], version = "^4.10.1"}
 pydantic-mongo = "^2.3.0"
+fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 
 [build-system]
