--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ python-multipart = "^0.0.12"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
+jsonschema = "^4.23.0"
 
 [build-system]
 requires = ["poetry-core"]
