add scripts to drop and populate fake DB

--- a/src/.env.example
+++ b/src/.env.example
@@ -4,3 +4,6 @@ JWT_SECRET = super_secret_key
 HOST_URL=localhost
 FRONTEND_HOST=localhost
 HOST_PORT=3001
+username=super_user_name
+email=super_user_email
+password=super_user_password
