--- a/src/.env.example
+++ b/src/.env.example
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://leonardocanteros2001:8eMDuMQAfXPgesvQ@products.ydzet.mongodb.net/
+#DATABASE_URL=postgresql://usuario:contraseña@localhost:5432/nombre_db
 # openssl rand -hex 32
 JWT_SECRET = super_secret_key
 HOST_URL=localhost
