--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 python-multipart = "^0.0.12"
 email-validator = "^2.2.0"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
