--- a/src/.env.example
+++ b/src/.env.example
@@ -4,6 +4,8 @@ JWT_SECRET = super_secret_key
 HOST_URL=localhost
 FRONTEND_HOST=localhost
 HOST_PORT=3001
+UNSPLASH_ACCESS_KEY="Unsplash API key for sample images in sample data"
 username=super_user_name
 email=super_user_email
 password=super_user_password
+
